# colorful

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md
examples/: CMakeLists.txt  basic.cpp  colors.yaml
src/: CMakeLists.txt  colorful.hpp
src/colorful/: colorful.hpp
